# focalplanner

./: CHANGELOG.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json
.github/: release-notes-head.md  release-notes-tail.md
.github/workflows/: release.yml
screenshots/: README.md  normalize.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: change_observer.rs  commands.rs  eventkit_service.rs  github_sync.rs  lib.rs  main.rs  menubar.rs  models.rs  tray.rs
src/components/: AboutDialog.tsx  AppSidebar.tsx  AreasDialog.tsx  AreasPane.tsx  CloneDialog.tsx  ConfirmDialog.tsx  EventInspector.tsx  FeatureTour.tsx  FocusBoard.tsx  GitHubConnectDialog.tsx  LaneCritters.tsx  LaneScenery.tsx  MiniPlanner.tsx  PermissionGate.tsx  PlannerToolbar.tsx  RecurrencePicker.tsx  ReminderInspector.tsx  ReminderList.tsx  ReviewPanel.tsx  SettingsDialog.tsx  SidebarCalendar.tsx  TimeGridView.tsx  UpdateBanner.tsx
src/components/ui/: Banner.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  context-menu.tsx  date-time-picker.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  sheet.tsx  textarea.tsx
src/lib/: anim.ts  api.ts  areas.ts  clones.ts  dates.ts  hiddenEvents.ts  meeting.ts  planner.ts  queries.ts  reschedule.ts  review.ts  sectors.ts  settings.ts  sync.ts  tips.ts  tray.ts  useUpdateCheck.ts  weather.ts
src/lib/demo/: seed.ts  store.ts
