[package]
name = "focalplanner"
version = "1.1.0"
description = "A native macOS planner that unifies Apple Calendar events and Reminders, organized by Areas of Focus."
authors = ["Juan Lupión <pantulis@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/pantulis/focalplanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focalplanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Preference sync via GitHub Device Flow + secret Gist.
ureq = { version = "2", features = ["json"] }
keyring = { version = "3", features = ["apple-native"] }
# Optional passphrase encryption of the synced blob.
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

# Apple EventKit bindings (macOS only).
# Sync methods are used inside tauri::async_runtime::spawn_blocking, so the
# "async" feature isn't needed.
[target.'cfg(target_os = "macos")'.dependencies]
eventkit = "0.3"
# For observing EKEventStoreChanged via NSNotificationCenter.
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSNotification",
    "NSOperation",
    "block2",
] }

